# oneko

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  animation.cc  build.py  frame_info.h  images.cc  layer_shell_fixes.h  main.cc  makefile  oneko.cc  oneko.hh  oneko.py  oneko.spec  oneko_impl.hh  protocols.sh  requirements.txt  spritesheet.h  spritesheet.py  toolchain.cmake  tray.cc  window.cc  wlr-layer-shell-unstable-v1-protocol.c  xdg-shell-protocol.c
src/: cat.rs  main.rs  mouse.rs  sprites.rs  window.rs
